# kafka_json

./: .env  Cargo.toml
src/: main.rs  payloads.rs  test.rs  types.rs
