[package]
name = "kafka_rest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["macros"]}
dotenv = "0.15.0"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
tokio = { version = "1.40.0", features = ["full"] }
zerocopy = "0.7.35"
zerocopy-derive = "0.7.35"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "main"
path = "src/main.rs"
